# slimming-bot

./: .gitignore  main.py  pyproject.toml
src/: config.py  database.py  enums.py  loader.py  starter.py  texts.py
src/callbacks/: report.py
src/filters/: private.py
src/handlers/: __init__.py  activity.py  eat.py  error.py  physical.py  report.py  start.py  weight.py
src/keyboards/: ikbm.py  kbm.py
src/models/: __init__.py  eat.py  physical.py  types.py  user.py  weight.py
src/services/: db.py  exceptions.py  inputs.py  message.py
src/states/: __init__.py  input.py  register.py  report.py
src/validators/: numeric.py
