[tool.poetry]
name = "slimming-bot"
version = "0.1.0"
description = ""
authors = ["Kirill Redko <domovoidie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.29"}
python-dotenv = "^1.0.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
